--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,14 +14,28 @@
     <string name="create">Создать</string>
     <string name="haveaccount">Есть аккаунт?</string>
     <string name="createaccount">Создать аккаунт</string>
-    <string name="nothingtoShowText">Пока что у вас нет никаких дел.<br/>    Хорошего отдыха!</string>
+    <string name="nothingtoShowText">Пока что у вас нет никаких дел.<br />    Хорошего отдыха!</string>
     <string name="header">Заголовок</string>
     <string name="description">Описание</string>
     <string name="deadline">Срок выполнения задачи</string>
     <string name="save">сохранить</string>
+    <string name="note">Заметка</string>
+    <string name="cancel">Отмена</string>
+    <string name="input_text">Input text</string>
 
     <string-array name="planets_array">
-        <item>Mercury</item>
+        <item>Категория задачи</item>
+        <item>Venus</item>
+        <item>Earth</item>
+        <item>Mars</item>
+        <item>Jupiter</item>
+        <item>Saturn</item>
+        <item>Uranus</item>
+        <item>Neptune</item>
+    </string-array>
+
+    <string-array name="planets_array2">
+        <item>Приоритет</item>
         <item>Venus</item>
         <item>Earth</item>
         <item>Mars</item>
