--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="note">Заметка</string>
     <string name="cancel">Отмена</string>
     <string name="input_text">Input text</string>
+    <string name="sign_out">Sign Out</string>
 
     <string-array name="planets_array">
         <item>Категория задачи</item>
