mvvm sign in and sign out are working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,8 @@
     <string name="categoryTasks">Категория задачи</string>
 
     <string name="preference_file_key">sharedPrefSmartName</string>
+    <string name="tokenKey">tokenSmartName</string>
+    <string name="defaultToken">no token</string>
 
 
     <string-array name="planets_array">
