showing error to user, added pull to refresh, swipe to delete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="tokenKey">tokenSmartName</string>
     <string name="defaultToken">no token</string>
     <string name="emptyStateString">Пока что у вас нет никаких дел. <br/>Хорошего отдыха!</string>
+    <string name="menu_refresh">menu refresh</string>
 
 
     <string-array name="planets_array">
