--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="save">сохранить</string>
     <string name="note">Заметка</string>
     <string name="cancel">Отмена</string>
+    <string name="ok">Ок</string>
     <string name="input_text">Input text</string>
     <string name="sign_out">Sign Out</string>
     <string name="priority">Приоритет</string>
